# VocalTractLab_alt

./: .gitignore  CMakeLists.txt  README.md
API/: ala.ges  example1.py  example2.py  example3.py  example4.py
API/Sources/: Constants.h  Dsp.cpp  F0EstimatorYin.cpp  GeometricGlottis.cpp  Geometry.h  IirFilter.h  ImpulseExcitation.cpp  LfPulse.h  Matrix2x2.cpp  Matrix2x2.h  PoleZeroPlan.cpp  Sampa.h  Signal.h  SoundLib.cpp  SoundLib.h  Splines.cpp  Splines.h  StaticPhone.h  Surface.cpp  Surface.h  Synthesizer.cpp  Synthesizer.h  TimeFunction.cpp  TimeFunction.h  TlModel.h  TriangularGlottis.cpp  Tube.h  TubeSequence.h  TwoMassModel.h  VocalTractLabApi.cpp  VowelLf.h  XmlNode.cpp
GUI/Examples/: apfelsine.seg  example01.ges  example01.seg  example02.ges  example02.seg  example03.ges  example03.seg  example04.ges  example04.seg  example05.ges  example05.seg  example06.ges  example06.seg
GUI/Sources/Backend/: AnatomyParams.cpp  AnatomyParams.h  Dsp.h  F0EstimatorYin.h  GeometricGlottis.h  Geometry.cpp  GesturalScore.cpp  GesturalScore.h  Glottis.cpp  Glottis.h  IirFilter.cpp  ImpulseExcitation.h  LfPulse.cpp  PoleZeroPlan.h  Sampa.cpp  SegmentSequence.cpp  SegmentSequence.h  Signal.cpp  StaticPhone.cpp  TdsModel.cpp  TdsModel.h  TlModel.cpp  TriangularGlottis.h  Tube.cpp  TwoMassModel.cpp  VocalTract.cpp  VocalTract.h  VocalTractLabApi.h  VoiceQualityEstimator.cpp  VoiceQualityEstimator.h  VowelLf.cpp  XmlHelper.cpp  XmlHelper.h  XmlNode.h
GUI/Sources/Frontend/: AnalysisResultsDialog.cpp  AnalysisResultsDialog.h  AnalysisSettingsDialog.cpp  AnalysisSettingsDialog.h  AnatomyParamsDialog.cpp  AnatomyParamsDialog.h  AnnotationDialog.cpp  AnnotationDialog.h  Application.cpp  Application.h  AreaFunctionPicture.cpp  AreaFunctionPicture.h  BasicPicture.cpp  BasicPicture.h  ColorScale.cpp  ColorScale.h  CrossSectionPicture.cpp  CrossSectionPicture.h  Data.cpp  Data.h  EmaConfigDialog.cpp  EmaConfigDialog.h  FdsOptionsDialog.cpp  FdsOptionsDialog.h  FormantOptimizationDialog.cpp  FormantOptimizationDialog.h  GesturalScorePage.cpp  GesturalScorePage.h  GesturalScorePicture.cpp  GesturalScorePicture.h  GlottisDialog.cpp  GlottisDialog.h  GlottisPanel.cpp  GlottisPanel.h  GlottisPicture.cpp  GlottisPicture.h  Graph.cpp  Graph.h  IconsXpm.h  LfPulseDialog.cpp  (+52 more)
Sources/Frontend/: MainWindow.cpp
