project(VocalTractLab)
cmake_minimum_required(VERSION 2.8)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra")
endif()

find_package(PkgConfig REQUIRED)
pkg_check_modules(OPENAL REQUIRED IMPORTED_TARGET openal)

add_compile_definitions(HAVE_OPENAL)

find_package(wxWidgets 3.1 REQUIRED COMPONENTS gl core base)
include(${wxWidgets_USE_FILE})

include_directories(
    Sources/Backend
    Sources/Frontend
)

set(BACKEND_FILES
    Sources/Backend/AnatomyParams.cpp
    Sources/Backend/AnatomyParams.h
    Sources/Backend/AudioFile.h
    Sources/Backend/Constants.h
    Sources/Backend/Dsp.cpp
    Sources/Backend/Dsp.h
    Sources/Backend/F0EstimatorYin.cpp
    Sources/Backend/F0EstimatorYin.h
    Sources/Backend/GeometricGlottis.cpp
    Sources/Backend/GeometricGlottis.h
    Sources/Backend/Geometry.cpp
    Sources/Backend/Geometry.h
    Sources/Backend/GesturalScore.cpp
    Sources/Backend/GesturalScore.h
    Sources/Backend/Glottis.cpp
    Sources/Backend/Glottis.h
    Sources/Backend/IirFilter.cpp
    Sources/Backend/IirFilter.h
    Sources/Backend/ImpulseExcitation.cpp
    Sources/Backend/ImpulseExcitation.h
    Sources/Backend/LfPulse.cpp
    Sources/Backend/LfPulse.h
    Sources/Backend/Matrix2x2.cpp
    Sources/Backend/Matrix2x2.h
    Sources/Backend/PoleZeroPlan.cpp
    Sources/Backend/PoleZeroPlan.h
    Sources/Backend/Sampa.cpp
    Sources/Backend/Sampa.h
    Sources/Backend/SegmentSequence.cpp
    Sources/Backend/SegmentSequence.h
    Sources/Backend/Signal.cpp
    Sources/Backend/Signal.h
    Sources/Backend/SoundLib.cpp
    Sources/Backend/SoundLib.h
    Sources/Backend/Splines.cpp
    Sources/Backend/Splines.h
    Sources/Backend/StaticPhone.cpp
    Sources/Backend/StaticPhone.h
    Sources/Backend/Surface.cpp
    Sources/Backend/Surface.h
    Sources/Backend/Synthesizer.cpp
    Sources/Backend/Synthesizer.h
    Sources/Backend/TdsModel.cpp
    Sources/Backend/TdsModel.h
    Sources/Backend/TimeFunction.cpp
    Sources/Backend/TimeFunction.h
    Sources/Backend/TlModel.cpp
    Sources/Backend/TlModel.h
    Sources/Backend/TriangularGlottis.cpp
    Sources/Backend/TriangularGlottis.h
    Sources/Backend/Tube.cpp
    Sources/Backend/Tube.h
    Sources/Backend/TubeSequence.h
    Sources/Backend/TwoMassModel.cpp
    Sources/Backend/TwoMassModel.h
    Sources/Backend/VocalTract.cpp
    Sources/Backend/VocalTract.h
    Sources/Backend/VocalTractLabApi.cpp
    Sources/Backend/VocalTractLabApi.h
    Sources/Backend/VoiceQualityEstimator.cpp
    Sources/Backend/VoiceQualityEstimator.h
    Sources/Backend/VowelLf.cpp
    Sources/Backend/VowelLf.h
    Sources/Backend/XmlHelper.cpp
    Sources/Backend/XmlHelper.h
    Sources/Backend/XmlNode.cpp
    Sources/Backend/XmlNode.h
)

set(FRONTEND_FILES
    Sources/Frontend/AnalysisResultsDialog.cpp
    Sources/Frontend/AnalysisResultsDialog.h
    Sources/Frontend/AnalysisSettingsDialog.cpp
    Sources/Frontend/AnalysisSettingsDialog.h
    Sources/Frontend/AnatomyParamsDialog.cpp
    Sources/Frontend/AnatomyParamsDialog.h
    Sources/Frontend/AnnotationDialog.cpp
    Sources/Frontend/AnnotationDialog.h
    Sources/Frontend/Application.cpp
    Sources/Frontend/Application.h
    Sources/Frontend/AreaFunctionPicture.cpp
    Sources/Frontend/AreaFunctionPicture.h
    Sources/Frontend/BasicPicture.cpp
    Sources/Frontend/BasicPicture.h
    Sources/Frontend/ColorScale.cpp
    Sources/Frontend/ColorScale.h
    Sources/Frontend/CrossSectionPicture.cpp
    Sources/Frontend/CrossSectionPicture.h
    Sources/Frontend/Data.cpp
    Sources/Frontend/Data.h
    Sources/Frontend/EmaConfigDialog.cpp
    Sources/Frontend/EmaConfigDialog.h
    Sources/Frontend/FdsOptionsDialog.cpp
    Sources/Frontend/FdsOptionsDialog.h
    Sources/Frontend/FormantOptimizationDialog.cpp
    Sources/Frontend/FormantOptimizationDialog.h
    Sources/Frontend/GesturalScorePage.cpp
    Sources/Frontend/GesturalScorePage.h
    Sources/Frontend/GesturalScorePicture.cpp
    Sources/Frontend/GesturalScorePicture.h
    Sources/Frontend/GlottisDialog.cpp
    Sources/Frontend/GlottisDialog.h
    Sources/Frontend/GlottisPanel.cpp
    Sources/Frontend/GlottisPanel.h
    Sources/Frontend/GlottisPicture.cpp
    Sources/Frontend/GlottisPicture.h
    Sources/Frontend/Graph.cpp
    Sources/Frontend/Graph.h
    Sources/Frontend/IconsXpm.h
    Sources/Frontend/LfPulseDialog.cpp
    Sources/Frontend/LfPulseDialog.h
    Sources/Frontend/LfPulsePicture.cpp
    Sources/Frontend/LfPulsePicture.h
    Sources/Frontend/MainWindow.cpp
    Sources/Frontend/MainWindow.h
    Sources/Frontend/PhoneticParamsDialog.cpp
    Sources/Frontend/PhoneticParamsDialog.h
    Sources/Frontend/PoleZeroDialog.cpp
    Sources/Frontend/PoleZeroDialog.h
    Sources/Frontend/PoleZeroPlot.cpp
    Sources/Frontend/PoleZeroPlot.h
    Sources/Frontend/SignalComparisonPicture.cpp
    Sources/Frontend/SignalComparisonPicture.h
    Sources/Frontend/SignalPage.cpp
    Sources/Frontend/SignalPage.h
    Sources/Frontend/SignalPicture.cpp
    Sources/Frontend/SignalPicture.h
    Sources/Frontend/SilentMessageBox.cpp
    Sources/Frontend/SilentMessageBox.h
    Sources/Frontend/SimpleSpectrumPicture.cpp
    Sources/Frontend/SimpleSpectrumPicture.h
    Sources/Frontend/SpectrogramPicture.cpp
    Sources/Frontend/SpectrogramPicture.h
    Sources/Frontend/SpectrogramPlot.cpp
    Sources/Frontend/SpectrogramPlot.h
    Sources/Frontend/SpectrumOptionsDialog.cpp
    Sources/Frontend/SpectrumOptionsDialog.h
    Sources/Frontend/SpectrumPicture.cpp
    Sources/Frontend/SpectrumPicture.h
    Sources/Frontend/SynthesisThread.cpp
    Sources/Frontend/SynthesisThread.h
    Sources/Frontend/TdsOptionsDialog.cpp
    Sources/Frontend/TdsOptionsDialog.h
    Sources/Frontend/TdsPage.cpp
    Sources/Frontend/TdsPage.h
    Sources/Frontend/TdsSpatialSignalPicture.cpp
    Sources/Frontend/TdsSpatialSignalPicture.h
    Sources/Frontend/TdsTimeSignalPicture.cpp
    Sources/Frontend/TdsTimeSignalPicture.h
    Sources/Frontend/TdsTubePicture.cpp
    Sources/Frontend/TdsTubePicture.h
    Sources/Frontend/TimeAxisPicture.cpp
    Sources/Frontend/TimeAxisPicture.h
    Sources/Frontend/TransitionDialog.cpp
    Sources/Frontend/TransitionDialog.h
    Sources/Frontend/VocalTractDialog.cpp
    Sources/Frontend/VocalTractDialog.h
    Sources/Frontend/VocalTractPage.cpp
    Sources/Frontend/VocalTractPage.h
    Sources/Frontend/VocalTractPicture.cpp
    Sources/Frontend/VocalTractPicture.h
    Sources/Frontend/VocalTractShapesDialog.cpp
    Sources/Frontend/VocalTractShapesDialog.h
)

add_library(VocalTractLabApi SHARED ${BACKEND_FILES})
target_link_libraries(VocalTractLabApi
    PkgConfig::OPENAL
)

add_library(VTLBackend STATIC ${BACKEND_FILES})

add_executable(VocalTractLab2
    ${FRONTEND_FILES}
)
target_link_libraries(VocalTractLab2
    VTLBackend
    ${wxWidgets_LIBRARIES}
    GLU
    GL
    PkgConfig::OPENAL
)
